# fake-miniupnpd

./: .gitmodules  CMakeLists.txt  README
fake/: nfct_get.cpp  nftables.cpp  nftnlrdr.cpp  nftpinhole.cpp  records.cpp  records.hpp
